[tool.poetry]
name = "payhere-project"
version = "0.1.0"
description = ""
authors = ["Gundue <gunwoo1919@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.0"
jwt = "^1.3.1"
pymysql = "^1.1.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pytest = "^7.4.4"
python-multipart = "^0.0.6"
starlette = "^0.35.1"
uvicorn = "^0.26.0"
bcrypt = "^4.1.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
